fix(ui): Add spacing to icons instead of relying on spaces

--- a/scouting/static/main/styles.css
+++ b/scouting/static/main/styles.css
@@ -2135,6 +2135,9 @@
     border-color: var(--color-gray-200, currentcolor);
   }
 }
+i {
+  margin: calc(var(--spacing) * 1);
+}
 .ui_button {
   margin-block: calc(var(--spacing) * 2);
   border-radius: var(--radius-xl);
